[package]
name = "codesearch"
version = "0.1.0"
authors = ["Alex Angelini <alex.louis.angelini@gmail.com>"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
